# mindshare-backend-optimization

./: .env.example  .gitignore  01_setup_infrastructure.sql  02_create_indexes_and_state.sql  CHOOSE_YOUR_PATH.md  CREATE_TEST_DATA_ACURAST.sql  EXECUTION_GUIDE.md  INCREMENTAL_DECAY_TEST_GUIDE.md  INSERT_50_LATEST_ACURAST_RECORDS.sql  MIGRATION_EXECUTE_ALL.sql  MIGRATION_EXECUTE_ALL_TEST_TABLES.sql  MIGRATION_EXECUTE_ALL_TEST_TABLES.sql.backup  MIGRATION_INCREMENTAL_DECAY_TEST_TO_PROD.md  MIGRATION_SUMMARY.md  README.md  README_MIGRATION.md  SCHEMA_STRUCTURE_EXPLANATION.md  TEST_TABLES_EXECUTION_GUIDE.md  epochs.txt  main.py  mindshare_config.py  pyproject.toml  run_decay_pipeline.py
DECAY_MIGRATION/: CLEANUP_TEST_TABLES.sql
backend_optimization/: 00_apply_all.sql  01_partitions.sql  02_indexes_tier1.sql  03_indexes_tier2.sql  README.md  decay_00_tables_and_log.sql  decay_01_logging.sql  decay_02_calculate_decay_scores.sql  decay_03_calculate_global_decay_scores.sql  decay_10_incremental_state_and_indexes.sql  decay_11_calculate_decay_scores_incremental.sql  decay_12_calculate_global_decay_scores_incremental.sql  decay_13_tail_cores.sql  decay_20_incremental_simulation.sql  decay_21_benchmark_full_vs_incremental.sql  decay_22_split_95_5_test.sql  decay_23_split_by_date_test.sql  decay_README.md
config/: mindshare.yaml
docs/: Verify Icremental logic.sql  analytics_incremental_engagement.md  database_object_dependencies.md  decay_base_score_change_semantics.md  decay_end_to_end_test_guide.md  decay_frozen_approach_incremental_incompatibility.md  decay_incremental_computation.md  decay_incremental_simulation_and_testing.md  decay_prod_migration_runbook.md  decay_runbook.md  (+7 more)
(+95 files in other folders)
