[project]
name = "mindshare-backend-optimization"
version = "0.1.0"
description = "Memory-bounded Polars contribution-decay pipeline for PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.18",
    "pyarrow>=18.0",
    "python-dotenv>=1.0",
    # psycopg3 named cursors keep large source reads memory-bounded and COPY FROM
    # STDIN provides the fast PostgreSQL write path.
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3",
]
docs = [
    "mkdocs-material>=9.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mindshare_compute"]

[project.scripts]
mindshare-decay = "mindshare_compute.cli:main"
